k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-booking-service
  namespace: hotel-booking
spec:
  type: ClusterIP
  selector:
    app: hotel-booking
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
